# yoink-dl

./: README.md  justfile  pyproject.toml
frontend/: manifest.tsx  tsconfig.json
frontend/src/: types.ts
frontend/src/api/: cookies.ts  dl-stats.ts  downloads.ts  index.ts  nsfw.ts  settings.ts
frontend/src/components/: CookieFavicon.tsx
frontend/src/hooks/: useFavicon.ts
frontend/src/lib/: cookie-utils.ts
src/tests/: conftest.py  test_caption.py  test_clip.py  test_download_log.py  test_file_cache.py  test_normalizer.py  test_nsfw.py  test_rate_limit.py  test_resolver.py
src/yoink_dl/: __init__.py  activity.py  config.py  list_provider.py  plugin.py  standalone.py
src/yoink_dl/api/: router.py  schemas.py
src/yoink_dl/bot/: middleware.py  progress.py
src/yoink_dl/commands/: __init__.py  admin.py  args.py  ask_menu.py  clean.py  clip.py  cookie.py  cut.py  format.py  inline.py  keyboard.py  lang.py  lang_ext.py  link.py  list_formats.py  media.py  mediainfo.py  nsfw.py  playlist.py  proxy.py  search.py  settings.py  split.py  subs.py  tags.py  url_handler.py
src/yoink_dl/download/: __init__.py  ffmpeg.py  gallery.py  manager.py  music.py  postprocess.py  youtubei.py  ytdlp.py
src/yoink_dl/services/: __init__.py  cookie_account.py  cookie_tokens.py  cookies.py  cookies_netscape.py  ipv6_pool.py  nsfw.py  proxy.py  yttv_oauth.py
src/yoink_dl/storage/: models.py  repos.py
src/yoink_dl/upload/: __init__.py  caption.py  sender.py
src/yoink_dl/url/: __init__.py  clip.py  domains.py  extractor.py  normalizer.py  pipeline.py  resolver.py
(+39 files in other folders)
